--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,12 +4,6 @@ name: blank1
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for th# This is a basic workflow to help you get started with Actions
-
-name: blank1
-
-# Controls when the workflow will run
-on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master", "devel_workflow" ]
@@ -56,66 +50,8 @@ jobs:
           echo "CICD can easily fail because of typos = ${{secrets.my_first_secret}}"
           echo 
           echo WARNING: Its easy to expose secret values:
-          echo my_first_secret=`echo "${{secrets.my_first_secret}}" |rev`
-          echo GITHUB_TOKEN=`echo "${{secrets.GITHUB_TOKEN}}" |rev`
-          echo
-          env | sort
-        env:
-          new_var: hello_larry
-          my_test_secret2: ${{ secrets.my_first_secret }}
-
-  build2:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run a one-liner
-        run: env |sorte "master" branch
-  push:
-    branches: [ "master", "devel_workflow" ]
-  pull_request:
-    branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-    inputs:
-      set_this:
-        description: "GUI_name"
-        default: "some string"
-        type: string
-        required: true
-
-env:
-  # set global environment variables
-
-  # import secrets - LF: I prefer the visibility of loading these globally
-  my_test_secret: ${{ secrets.my_first_secret }}
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build1:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo CICD script should include self-tests and be paranoid about detecting errors
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo CICD script should include self-tests and be paranoid about detecting errors
-          echo
-          echo "CICD can easily fail because of typos = \$\{\{secrets.my_test_secret2\}\} "
-          echo "CICD can easily fail because of typos = ${{secrets.my_test_secret2}}"
-          echo 
-          echo WARNING: Its easy to expose secret values:
           echo my_test_secret2=`echo ${{secrets.my_first_secret}} |rev`
-          echo GITHUB_TOKEN=`${{secrets.GITHUB_TOKEN}} |rev`
+          echo GITHUB_TOKEN=`echo ${{secrets.GITHUB_TOKEN}} |rev`
           echo
           env | sort
         env:
