--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,9 +7,9 @@ name: blank1
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master", "devel_workflow" ]
+    branches: [ "main", "devel_workflow" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
