--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,15 +10,21 @@ on:
     branches: [ "main", "devel_workflow" ]
   pull_request:
     branches: [ "main" ]
+  label:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      set_this:
+      this_variable:
         description: "GUI_name"
         default: "some string"
         type: string
         required: true
+      another_var:
+        description: "blah"
+        type: string
+        required: true
+        
 
 env:
   # set global environment variables
