--- a/.github/example_workflow.yml
+++ b/.github/example_workflow.yml
@@ -1,7 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: blank1
-
+name: workflow_example
 
 # Controls when the workflow will run
 on:
@@ -15,14 +14,15 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      this_variable:
-        description: "GUI_name"
-        default: "some string"
+      var1:
+        description: "var one"
+        default: "default string"
         type: string
         required: true
-      another_var:
-        description: "blah"
-        type: string
+      var2:
+        description: "var two"
+        type: boolean
+        default: false
         required: true
         
 
@@ -30,18 +30,22 @@ env:
   # set global environment variables
 
   # import secrets - LF: I prefer the visibility of loading these globally
+  # See Readme for more info on secrets and Credential management
   my_test_secret: ${{ secrets.my_first_secret }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build1:
-    # The type of runner that the job will run on
+  job1:
+    name: job1 hello secrets
+
+    # Every JOB runs on it's own virtual machine
+    # These are created for each job and destroyed at the end
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Check-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
@@ -49,13 +53,8 @@ jobs:
         run: echo CICD script should include self-tests and be paranoid about detecting errors
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: WARNING! it's easy to expose secrets
         run: |
-          echo CICD script should include self-tests and be paranoid about detecting errors
-          echo
-          echo "CICD can easily fail because of typos = \$\{\{secrets.my_first_secretXX\}\} "
-          echo "CICD can easily fail because of typos = ${{secrets.my_first_secretXX}}"
-          echo 
           echo WARNING: Its easy to expose secret values 
           echo Only a few developers should have access to CICD code
           echo The following values are exposed simply by reversing the strings
@@ -68,21 +67,26 @@ jobs:
           A_test_secret2: ${{ secrets.my_first_secret }}
           A_GITHUB_TOKEN:  ${{secrets.GITHUB_TOKEN}} 
           
-  build2:
+  job2:
     runs-on: ubuntu-latest
     steps:
       - name: Run a one-liner
         run: env |sort
 
-  build3:
-    needs: build1
+  job3:
+    needs: job1
     runs-on: ubuntu-latest
     steps:
-      - name: Run a one-liner
-        run: env |sort
+      - name: Sanity Test
+        run: |
+          echo CICD script should include self-tests and be paranoid about detecting errors
+          echo
+          echo "CICD can easily fail because of typos = \$\{\{secrets.my_first_secretXX\}\} "
+          echo "CICD can easily fail because of typos = ${{secrets.my_first_secretXX}}"
+          echo 
 
-  build4:
-    needs: build1
+  job4:
+    needs: job1
     runs-on: ubuntu-latest
     steps:
       - name: Run a one-liner
